redundant parameters removed